Fix a display bug for styled selects
The select boxes were only covering half of the styled boxes so clicking
on the right side of the styled dropdown was not opening the dropdown.

--- a/public/less/includes/form.less
+++ b/public/less/includes/form.less
@@ -55,7 +55,7 @@ fieldset textarea, .fs-textarea {
 }
 .sselect-focus { outline: 3px solid @highlight; }
 .sselect-default { color: @input_placeholder_color; }
-.sselect select { position: absolute; top: 0; left: 0; opacity: 0.01; }
+.sselect select { position: absolute; top: 0; left: 0; width: 100%; opacity: 0.01; }
 .icon-dropdown, .fs-select {
   .bg('icon/dropdown.png', right 25px, center); background-color: #fff; background-size: 40px 25px;
 }
